# drogon-project-scaffold

./: CMakeLists.txt  LICENSE  config.json
cmake/: generate-migrations.cmake  libs.cmake
config/: config.h.in
migrations/: 001_create_config_table.sql  002_create_user_table.sql
source/: main.cpp
source/api/: HelloApi.cpp  HelloApi.hpp
source/components/: HelloComponent.cpp  HelloComponent.hpp
source/database/: Database.cpp  Database.hpp  app_config.cpp  app_config.hpp
source/middleware/: RateLimiter.cpp  RateLimiter.hpp
source/routers/: MainPage.cpp  MainPage.hpp
source/utils/: template.cpp  template.hpp
templates/: layout.html
templates/components/: hello_fragment.html
